--- a/frontend/stylesheets/chai-template/fonts.scss
+++ b/frontend/stylesheets/chai-template/fonts.scss
@@ -65,6 +65,11 @@
     line-height: 21px;
   }
 
+  .CB1-B{
+    font-family: 'DINOT--Bold', Arial, sans-serif;
+    font-size: 16px;
+    line-height: 21px;
+  }
 
   .CB2{
     font-family: 'DINOT--Regular', Arial, sans-serif;
