--- a/frontend/stylesheets/run-experiment.scss
+++ b/frontend/stylesheets/run-experiment.scss
@@ -1,5 +1,6 @@
 .run-experiment-state-active {
   min-width: 1205px;
+  overflow-y: hidden;
   .chart-screens-container {
     flex-grow: 1; 
     position: relative; 
