--- a/frontend/javascripts/app/views/experiment/run-experiment.html
+++ b/frontend/javascripts/app/views/experiment/run-experiment.html
@@ -17,8 +17,8 @@
     limitations under the License.
 -->
 <div ng-controller="RunExperimentCtrl">
-  <div menu-overlay sidemenu-template="app/views/experiment/left-menu.html">
-    <div full-height offset="37" style="display: flex; flex-direction: column;">
+  <div class="pika-wrapper" side-menu-layout is-open="false">
+    <div style="display: flex; flex-direction: column; height: calc(100% - 40px);">
       <header-status experiment-id="experiment.id">
         <div class="stripes-and-name" toggle-sidemenu>
           <div class="stripes">
@@ -26,7 +26,7 @@
           </div>
         </div>
       </header-status>
-      <div class="chart-screens-container" full-height  offset="120">
+      <div class="chart-screens-container">
         <div ng-if="chart === 'amplification'" style="position:absolute; width: 100%; height: 100%; min-width: 1368px; min-height: 668px;" ng-include src="'app/views/experiment/amplification-chart.html'">
         </div>
         <div ng-if="chart === 'standard-curve'" style="position:absolute; width: 100%; height: 100%; min-width: 1368px; min-height: 668px;" ng-include src="'app/views/experiment/standard-curve.html'">
