update sidenav for new design

--- a/frontend/javascripts/app/views/directives/v2/exp-name-editor-left-menu.html
+++ b/frontend/javascripts/app/views/directives/v2/exp-name-editor-left-menu.html
@@ -2,7 +2,7 @@
   <div class="side-top-header CB2-M">    
     <label>Experiment Name</label>  
     <span class="edit-experiment-name" ng-click="focusExpName()" ng-show="!editExpNameMode">Edit</span>
-    <b><span class="edit-experiment-name" ng-click="saveExperiment(experiment)" ng-show="editExpNameMode">Save</span></b>
+    <span class="edit-experiment-name CB2-B" ng-click="saveExperiment(experiment)" ng-show="editExpNameMode">Save</span>
     <span class="edit-experiment-name" ng-click="cancelExpName()" ng-show="editExpNameMode" style="margin-right: 10px;">Cancel</span>
   </div>
   <form name="expForm">
