--- a/frontend/stylesheets/stage-step.css.scss
+++ b/frontend/stylesheets/stage-step.css.scss
@@ -90,7 +90,7 @@
     }
 
     .canvas-containing {
-      height: 400px;
+      height: 100%;
       width: 100%;
       overflow-x: hidden;
       overflow-y: hidden;
