--- a/frontend/javascripts/app/views/directives/experiment-item.html
+++ b/frontend/javascripts/app/views/directives/experiment-item.html
@@ -16,12 +16,12 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<div class="XB1 text-center" ng-if="message == 'Run Experiment'">
-  <label class="exp-message" ng-if="message == 'Run Experiment'" ng-class="{'lid-open': (lidOpen || !isIdle) && message == 'Run Experiment', 'ready-action' : runReady}" ng-click="manageAction()">{{message}}</label>
+<div class="XB1 text-center" ng-if="message == 'Run Experiment'" style="padding: 0">
+  <label class="exp-message CB1-M" ng-if="message == 'Run Experiment'" ng-class="{'lid-open': (lidOpen || !isIdle) && message == 'Run Experiment', 'ready-action' : runReady}" ng-click="manageAction()">{{message}}</label>
 <!--   <label class="exp-message started-experiment" ng-if="message != 'Run Experiment'" ng-click="manageAction()" toggle-sidemenu>{{message}}</label> -->
-  <label class="XB1 lid-open-message" ng-if="lidOpen && message == 'Run Experiment'">Cannot run, lid is open</label>
-  <label class="XB1 lid-open-message" ng-if="!lidOpen && !isIdle && message == 'Run Experiment'">Cannot run, another experiment is running.</label>
-  <label class="exp-message confirm-exp" ng-show="runReady" ng-class="{'ng-hide': !runReady }" toggle-sidemenu class="B1 success"  ng-click="startExp()">
+  <label class="CB2 lid-open-message" ng-if="lidOpen && message == 'Run Experiment'">Cannot run, lid is open</label>
+  <label class="CB2 lid-open-message" ng-if="!lidOpen && !isIdle && message == 'Run Experiment'">Cannot run, another experiment is running.</label>
+  <label class="exp-message confirm-exp CB1-M success" ng-if="runReady" ng-class="{'ng-hide': !runReady }" ng-click="startExp()">
     <img src="images/conf_check.svg">Confirm Run Experiment
   </label>
 </div>
