update well layout page

--- a/frontend/javascripts/app/views/plate-layout.html
+++ b/frontend/javascripts/app/views/plate-layout.html
@@ -18,7 +18,7 @@ limitations under the License.
 -->
 <div ng-controller="PlateLayoutCtrl">
     <div class="pika-wrapper" side-menu-layout is-open="false">
-        <div style="display: flex; flex-direction: column; height: calc(100% - 40px);">
+        <div class="plate-layout-pane" style="display: flex; flex-direction: column; height: calc(100% - 40px);">
             <header-status experiment-id="experiment.id">
                 <div class="stripes-and-name" toggle-sidemenu>
                       <div class="stripes">
@@ -37,7 +37,7 @@ limitations under the License.
                 </div>
             </div>
 
-            <div class="plate-layout-box" full-height  offset="160">
+            <div class="plate-layout-box" full-height  offset="150">
                 <div class="plate-layout-details">
                     <div class="plate-layout-frame">
                         <div class="plate-layout-wells">
