--- a/frontend/stylesheets/plate-layout.scss
+++ b/frontend/stylesheets/plate-layout.scss
@@ -592,3 +592,23 @@ li {
     cursor: pointer;
   }
 }
+
+.plate-layout-pane{
+  background: #eee;
+  overflow: hidden;
+  .plate-layout-box{
+    overflow: auto;
+    .plate-layout-details{
+      width: 100%;
+      height: 100%;
+      min-width: 1200px;
+      min-height: 650px;
+      .plate-layout-frame{
+        width: 1200px;
+        height: 650px;
+        margin: auto;
+        position: relative;
+      }
+    }
+  }
+}
